Bug 79011 - EDITING: find all/replace all, results window does not open
Summary: EDITING: find all/replace all, results window does not open
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.4.1 rc
Hardware: Other All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-05-21 11:17 UTC by gsmith
Modified: 2014-07-10 07:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gsmith 2014-05-21 11:17:05 UTC
We have a large spreadsheet with multiple tabs that we must search for terms to be used in market studies. In version 4.2.3.3, after selecting all tabs and pressing CTRL-H, we could search the entire spreadsheet for a keyword by pressing Find All. The results would display in a separate window that we could then click on a result and be taken directly to the sheet and cell where the result was located. This made it VERY easy to locate results over multiple tabs and navigate to the specific data.

In 4.2.4.2, the results window does not appear. This also occurs in older versions. In 4.2.4.2, the cells in the current sheet matching the search terms are highlighted in blue, but no window of results and it's unclear if the search term was found on any other tabs in the spreadsheet.

For now, we are uninstalling 4.2.4.2 and going back to 4.2.3.3. When this feature works, it's EXTREMELY valuable under deadline.

Thanks!
Comment 1 Cor Nouws 2014-05-21 12:59:42 UTC
Hi gsmith

Thanks for reporting. I confirm this on Linux, in 4.2.4.rc1 already.
Cor
Comment 2 Kohei Yoshida 2014-05-23 03:30:16 UTC
I'm looking into this.  Unfortunately this one will take a bit of an effort to get fixed properly.
Comment 3 Commit Notification 2014-05-23 15:28:00 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=81c492ef18b04cc283561018d69818cbca7f83ef

fdo#79011: Properly implement the search results dialog as modeless.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-05-23 15:29:33 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f867f052d2672fdb91ee3be9e056ae97a8e642c&h=libreoffice-4-3

fdo#79011: Properly implement the search results dialog as modeless.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-05-23 15:42:15 UTC
4.2 backport: https://gerrit.libreoffice.org/9451
Comment 6 Commit Notification 2014-05-23 20:48:34 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dbbbf51bcc54e99611e809d4615be1d9f110d01a&h=libreoffice-4-2

fdo#79011: Properly implement the search results dialog as modeless.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-05-23 21:23:11 UTC
Fixed in 4.2.
Comment 8 Aaron B 2014-07-10 07:27:13 UTC
*** Bug 80141 has been marked as a duplicate of this bug. ***