fdo#79011: Properly implement the search results dialog as modeless.

It's unfortunate that adding a modeless dialog is such a pain.  But we
still need to implemenet this properly else we'll leak at best, or end
up with tons of weird bugs at worst.

Change-Id: Ie03260f288fad76f994d0ca6a8b1feeade299ffd
(cherry picked from commit 81c492ef18b04cc283561018d69818cbca7f83ef)